Fix crash when completing a to-do in the summary view

The "Mark To-do Completed" entry in the `KUrlLabel` pop-up menu called
`completeTodo()`, which called `updateView()`, which deleted the
`KUrlLabel`.  This seems to cause a segfault in Qt.

`completeTodo()` doesn't need to call `updateView()`;
`mChanger->modifyIncidence()` will cause an update.

BUG: 454536